[gd_scene load_steps=14 format=3 uid="uid://obxhafw1r4wn"]

[ext_resource type="Script" path="res://scripts/scenes/game_info_panel.gd" id="1_0kb6o"]
[ext_resource type="Shader" path="res://scripts/shaders/gradation_fade.gdshader" id="1_6en8f"]
[ext_resource type="Texture2D" uid="uid://ds3sthvko58el" path="res://textures/material_icons/play_arrow_48dp_FFFFFF_FILL1_wght400_GRAD0_opsz48.png" id="1_twlor"]
[ext_resource type="Texture2D" uid="uid://s277mwy73687" path="res://textures/material_icons/close_48dp_FFFFFF_FILL1_wght400_GRAD0_opsz48.png" id="2_aoabp"]
[ext_resource type="PackedScene" uid="uid://cj8cjhev5m5ji" path="res://scenes/objects/info_edit_panel.tscn" id="2_atmav"]
[ext_resource type="FontFile" uid="uid://l3kurcsot7lk" path="res://fonts/NOTOSANSJP-BOLD.OTF" id="3_5srsg"]
[ext_resource type="PackedScene" uid="uid://7oq6ayjq85ic" path="res://scenes/objects/running_panel.tscn" id="3_fit65"]
[ext_resource type="FontFile" uid="uid://c2qwsdhqfdrdl" path="res://fonts/NOTOSANSJP-LIGHT.OTF" id="4_0sjis"]
[ext_resource type="FontFile" uid="uid://00bmdktw1fa" path="res://fonts/NOTOSANSJP-BLACK.OTF" id="6_1lsr3"]
[ext_resource type="Script" path="res://scripts/nodes/animated_button.gd" id="8_dy630"]
[ext_resource type="Texture2D" uid="uid://dfwmesuj10f53" path="res://textures/material_icons/edit_note_48dp_FFFFFF_FILL1_wght400_GRAD0_opsz48.png" id="9_ipxa5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8q53t"]
shader = ExtResource("1_6en8f")
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/angle = 30.0
shader_parameter/offset = -0.645
shader_parameter/fade_scale = 0.3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0q5rk"]
shader = ExtResource("1_6en8f")
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/angle = 210.0
shader_parameter/offset = -0.75
shader_parameter/fade_scale = 1.0

[node name="GameInfoPanel" type="Panel"]
clip_children = 2
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(600, 344)
script = ExtResource("1_0kb6o")
info_edit_panel_scene = ExtResource("2_atmav")
running_panel_scene = ExtResource("3_fit65")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_8q53t")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="RightShadow" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_0q5rk")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 48.0
offset_right = 640.0
offset_bottom = 576.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_5srsg")
theme_override_font_sizes/font_size = 32
text = "Game Title"

[node name="CreatorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_0sjis")
theme_override_font_sizes/font_size = 16
text = "Creator"

[node name="Space" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/line_spacing = 1
theme_override_font_sizes/font_size = 13
text = "Description."
autowrap_mode = 3
text_overrun_behavior = 3

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = -104.0
offset_right = 192.0
offset_bottom = -32.0
grow_vertical = 0
pivot_offset = Vector2(72, 36)
theme_override_constants/icon_max_width = 54
theme_override_fonts/font = ExtResource("6_1lsr3")
theme_override_font_sizes/font_size = 36
text = "Play"
icon = ExtResource("1_twlor")
flat = true
alignment = 0
expand_icon = true
script = ExtResource("8_dy630")

[node name="CloseButton" type="Button" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -88.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = 88.0
grow_horizontal = 0
icon = ExtResource("2_aoabp")
flat = true
icon_alignment = 1
expand_icon = true

[node name="EditButton" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -88.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
icon = ExtResource("9_ipxa5")
flat = true
icon_alignment = 1
expand_icon = true
